Remove service-uuid from discovery

--- a/custom_components/dbuezas_eq3btsmart/manifest.json
+++ b/custom_components/dbuezas_eq3btsmart/manifest.json
@@ -9,5 +9,5 @@
   "loggers": ["bleak", "eq3bt"],
   "version": "1.0.0",
   "config_flow": true,
-  "bluetooth": [{ "service_uuid": "3e135142-654f-9090-134a-a6ff5bb77046" }, { "local_name": "CC-RT-BLE" }]
+  "bluetooth": [{ "local_name": "CC-RT-BLE" }]
 }
