--- a/custom_components/dbuezas_eq3btsmart/manifest.json
+++ b/custom_components/dbuezas_eq3btsmart/manifest.json
@@ -4,10 +4,10 @@
   "documentation": "https://www.home-assistant.io/integrations/eq3btsmart",
   "requirements": ["construct==2.10.56"],
   "dependencies": ["bluetooth"],
-  "codeowners": ["@dbuezas", "@rytilahti"],
+  "codeowners": ["@dbuezas", "@rytilahti", "@lkempf"],
   "iot_class": "local_polling",
   "loggers": ["bleak", "eq3bt"],
-  "version": "1.0.3",
+  "version": "2.0.0",
   "config_flow": true,
   "bluetooth": [{ "local_name": "CC-RT-BLE" }]
 }
