--- a/custom_components/dbuezas_eq3btsmart/manifest.json
+++ b/custom_components/dbuezas_eq3btsmart/manifest.json
@@ -1,13 +1,14 @@
 {
   "domain": "dbuezas_eq3btsmart",
-  "name": "dbuezas EQ3 Bluetooth Smart Thermostats",
-  "documentation": "https://www.home-assistant.io/integrations/eq3btsmart",
+  "name": "eQ-3 Bluetooth Smart Thermostats (dbuezas)",
+  "documentation": "https://github.com/dbuezas/eq3btsmart",
+  "issue_tracker": "https://github.com/dbuezas/eq3btsmart/issues",
   "requirements": ["construct==2.10.56"],
   "dependencies": ["bluetooth"],
-  "codeowners": ["@dbuezas", "@rytilahti"],
+  "codeowners": ["@dbuezas", "@rytilahti", "@lkempf"],
   "iot_class": "local_polling",
   "loggers": ["bleak", "eq3bt"],
-  "version": "1.0.3",
+  "version": "2.0.2",
   "config_flow": true,
   "bluetooth": [{ "local_name": "CC-RT-BLE" }]
 }
