--- a/custom_components/dbuezas_eq3btsmart/manifest.json
+++ b/custom_components/dbuezas_eq3btsmart/manifest.json
@@ -8,7 +8,8 @@
   "codeowners": ["@dbuezas", "@rytilahti", "@lkempf"],
   "iot_class": "local_polling",
   "loggers": ["bleak", "eq3bt"],
-  "version": "3.0.0",
+  "version": "3.1.0",
   "config_flow": true,
+  "quality_scale": "platinum",
   "bluetooth": [{ "local_name": "CC-RT-BLE" }]
 }
