--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ ruff = "^0.1.13"
 mypy = "^1.8.0"
 pre-commit = "^3.6.0"
 homeassistant = "^2024.1.3"
+homeassistant-stubs = "^2024.1.3"
+voluptuous-stubs = "^0.1.1"
 
 [build-system]
 requires = ["poetry-core"]
