feat: restructure repository contents
BREAKING CHANGE: The eq3btsmart integration will no longer ship with the eq3btsmart package

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,10 +4,13 @@ version = "0.0.0"
 description = ""
 authors = ["David Buezas, Lennard Beers"]
 readme = "README.md"
+repository = "https://github.com/dbuezas/eq3btsmart"
+packages = [
+    { include = "eq3btsmart" }
+]
 
 [tool.poetry.dependencies]
 python = ">=3.11,<3.13"
-
 
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.1.13"
