--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,9 @@ packages = [
 
 [tool.poetry.dependencies]
 python = ">=3.11,<3.13"
+bleak = "^0.21.1"
+construct = "^2.10.68"
+construct-typing = "^0.6.2"
 
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.1.13"
