refactor: fix typing issues in integration

--- a/custom_components/dbuezas_eq3btsmart/manifest.json
+++ b/custom_components/dbuezas_eq3btsmart/manifest.json
@@ -3,7 +3,7 @@
   "name": "eQ-3 Bluetooth Smart Thermostats (dbuezas)",
   "documentation": "https://github.com/dbuezas/eq3btsmart",
   "issue_tracker": "https://github.com/dbuezas/eq3btsmart/issues",
-  "requirements": ["construct==2.10.56"],
+  "requirements": ["eq3btsmart==0.0.0"],
   "dependencies": ["bluetooth"],
   "codeowners": ["@dbuezas", "@rytilahti", "@lkempf"],
   "iot_class": "local_polling",
