chore: hide dist directory from vscode

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -33,6 +33,7 @@
         "**/.mypy_cache": true,
         "**/.pytest_cache": true,
         "**/.ruff_cache": true,
+        "**/dist": true,
     },
     "extensions.ignoreRecommendations": false
 }
