chore: fix ruff command

--- a/.github/workflows/quality.yml
+++ b/.github/workflows/quality.yml
@@ -78,7 +78,7 @@ jobs:
 
       - name: Run ruff
         run: |
-          poetry run ruff . --check
+          poetry run ruff eq3btsmart custom_components/eq3btsmart
 
   mypy:
     needs: cache
