refactor: fix typing issues

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ bleak = "^0.21.1"
 construct = "^2.10.68"
 construct-typing = "^0.6.2"
 homeassistant = "^2023.1.1"
+bleak-retry-connector = "^3.4.0"
 
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.1.13"
