--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,5 +28,9 @@ voluptuous-stubs = "^0.1.1"
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
 
+[tool.ruff]
+unfixable = ["F401"]
+
 [tool.mypy]
+check_untyped_defs = true
 explicit_package_bases = true
