--- a/custom_components/eq3btsmart/manifest.json
+++ b/custom_components/eq3btsmart/manifest.json
@@ -3,8 +3,8 @@
   "name": "eQ-3 Bluetooth Smart Thermostats",
   "documentation": "https://github.com/dbuezas/eq3btsmart",
   "issue_tracker": "https://github.com/dbuezas/eq3btsmart/issues",
-  "requirements": ["construct"],
-  "dependencies": ["bluetooth"],
+  "requirements": ["git+https://github.com/dbuezas/eq3btsmart.git@refactor-code-style"],
+  "after_dependencies": ["bluetooth"],
   "codeowners": ["@dbuezas", "@eulemitkeule", "@rytilahti", "@lkempf"],
   "iot_class": "local_polling",
   "loggers": ["bleak", "eq3bt"],
