--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,10 @@ voluptuous-stubs = "^0.1.1"
 [tool.poetry.group.test.dependencies]
 pytest = "^7.4.4"
 
+
+[tool.poetry.group.integration.dependencies]
+bleak-esphome = "^0.4.1"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
