--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ voluptuous-stubs = "^0.1.1"
 
 [tool.poetry.group.test.dependencies]
 pytest = "^7.4.4"
+pytest-cov = "^4.1.0"
 
 
 [tool.poetry.group.integration.dependencies]
