--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ python = ">=3.11,<3.13"
 bleak = "^0.21.1"
 construct = "^2.10.68"
 construct-typing = "^0.6.2"
+pytest-asyncio = "^0.23.3"
 
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.1.13"
@@ -26,6 +27,9 @@ voluptuous-stubs = "^0.1.1"
 [tool.poetry.group.test.dependencies]
 pytest = "^7.4.4"
 pytest-cov = "^4.1.0"
+pytest-mock = "^3.12.0"
+pytest-freezer = "^0.4.8"
+freezegun = "^1.4.0"
 
 
 [tool.poetry.group.integration.dependencies]
